--- a/css/responsive-home.css
+++ b/css/responsive-home.css
@@ -7,43 +7,27 @@ and (max-width: 359px) {
     background-size: 100%;
     width: 100%;
 }
-
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width:12%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
-}
-
-.logo-name{
-  font-size: 10px;
-  padding-top: 15px;
-}
-
-span{
-  padding:0;
-  font-size: 12px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 12px;
+  width: 50%;
 }
 
 .toggle-btn {
-  width: 60px;
-  margin-right: 0px;
+  width: 90px;
+  margin-top: 0px;
 }
 
+.toggle-btn img {
+  width: 18%;
+}
+
+span{
+  font-size: 15px;
+}
+
+
 .main-headline{
-  margin-top: 10%;
+  margin-top: -5%;
   margin-left: 40px;
   width: 80%;
   padding: 0px;
@@ -90,7 +74,7 @@ h2.hash{
 
  /***SERVICES****/
  .services-item{
-  width: 100%;
+  width: 90%;
 
 }
 
@@ -169,32 +153,24 @@ h3.name{
 
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .partners-item{
-  width: 100%;
+  width: 40%;
+  padding: 10px 0;
 }
 
 .partners-item h3{
-  font-size: 40px;
-  padding: 0 30px;
+  font-size: 50px;
+  padding: 0;
   width: 100%;
-}
-
-p.label, p.description{
-  font-size: 14px;
-}
-
-img.partner-logo{
-  width: 100%;
-}
-
-img#uax{
-  width: 40%;
-  margin: 0 auto;
-position: relative;
-left: 30%;
+  margin-left: 70px;
 }
 
 
@@ -282,38 +258,22 @@ body{
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 15%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
-}
-
-.logo-name{
-  font-size: 11px;
-  padding-top: 25px;
-}
-
-span{
-  padding:0;
-  font-size: 14px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 20px;
+  width: 50%;
 }
 
 .toggle-btn {
-  width: 80px;
-  margin-right: 0px;
+  width: 90px;
+  margin-top: 0px;
+}
+
+.toggle-btn img {
+  width: 18%;
+}
+
+span{
+  font-size: 15px;
 }
 
 .main-headline{
@@ -364,7 +324,7 @@ h2.hash{
 
  /***SERVICES****/
  .services-item{
-  width: 100%;
+  width: 90%;
 
 }
 
@@ -443,17 +403,24 @@ h3.name{
 
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .partners-item{
-  width: 100%;
+  width: 40%;
+  padding: 10px 0;
 }
 
 .partners-item h3{
-  font-size: 40px;
-  padding: 0 30px;
+  font-size: 50px;
+  padding: 0;
   width: 100%;
+  margin-left: 70px;
 }
 
 p.label, p.description{
@@ -557,38 +524,22 @@ body{
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 15%;
-  margin-right: 0px;
-}
-
-
 .logo img{
-  margin-left: 10px;
-}
-
-.logo-name{
-  font-size: 11px;
-  padding-top: 25px;
-}
-
-span{
-  padding:0;
-  font-size: 14px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 20px;
+  margin-left: 0px;
+  width: 60%;
 }
 
 .toggle-btn {
-  width: 80px;
-  margin-right: 0px;
+  width: 100px;
+  margin-top: 10px;
+}
+
+.toggle-btn img {
+  width: 20%;
+}
+
+span{
+  font-size: 17px;
 }
 
 .main-headline{
@@ -709,17 +660,24 @@ h3.name{
 
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .partners-item{
-  width: 100%;
+  width: 40%;
+  padding: 10px 0;
 }
 
 .partners-item h3{
-  font-size: 40px;
-  padding: 0 30px;
+  font-size: 50px;
+  padding: 0;
   width: 100%;
+  margin-left: 70px;
 }
 
 .person-social p{
@@ -832,42 +790,26 @@ body{
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 15%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
-}
-
-.logo-name{
-  font-size: 14px;
-  padding-top: 25px;
-}
-
-span{
-  padding:0;
-  font-size: 20px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 25px;
+  width: 50%;
 }
 
 .toggle-btn {
   width: 100px;
-  margin-right: 0px;
+  margin-top: 10px;
+}
+
+.toggle-btn img {
+  width: 20%;
+}
+
+span{
+  font-size: 17px;
 }
 
 .main-headline{
-  margin-top: 15%;
+  margin-top: 10%;
   margin-left: 30px;
   width: 80%;
   padding: 40px;
@@ -984,30 +926,27 @@ p.label, p.description{
 a.person-social{
   font-size: 20px;
 }
+
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .partners-item{
-  width: 100%;
+  width: 40%;
+  padding: 10px 0;
 }
 
 .partners-item h3{
-  font-size: 40px;
-  padding: 0 30px;
+  font-size: 50px;
+  padding: 0;
   width: 100%;
-}
-
-img.partner-logo{
-  width: 100%;
-}
-
-img#uax{
-  width: 40%;
-  margin: 0 auto;
-position: relative;
-left: 30%;
+  margin-left: 70px;
 }
 
 
@@ -1097,39 +1036,24 @@ body{
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 15%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
-}
-
-.logo-name{
-  font-size: 18px;
-  padding-top: 35px;
-}
-
-span{
-  padding:0;
-  font-size: 25px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 25px;
+  width: 50%;
 }
 
 .toggle-btn {
-  width: 120px;
-  margin-right: 10px;
+  width: 110px;
+  margin-top: 20px;
 }
+
+.toggle-btn img {
+  width: 20%;
+}
+
+span{
+  font-size: 20px;
+}
+
 
 .main-headline{
   margin-top: 15%;
@@ -1177,7 +1101,7 @@ h2.hash{
 
  /***SERVICES****/
  .services-item{
-  width: 100%;
+  width: 90%;
 
 }
 
@@ -1243,28 +1167,24 @@ h3.name{
 
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .partners-item{
-  width: 100%;
+  width: 40%;
+  padding: 10px 0;
 }
 
 .partners-item h3{
-  font-size: 40px;
-  padding: 0 30px;
+  font-size: 50px;
+  padding: 0;
   width: 100%;
-}
-
-img.partner-logo{
-  width: 100%;
-}
-
-img#uax{
-  width: 40%;
-  margin: 0 auto;
-position: relative;
-left: 30%;
+  margin-left: 70px;
 }
 
 
@@ -1353,42 +1273,26 @@ body{
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 15%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
-}
-
-.logo-name{
-  font-size: 18px;
-  padding-top: 35px;
-}
-
-span{
-  padding:0;
-  font-size: 25px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 25px;
+  width: 50%;
 }
 
 .toggle-btn {
-  width: 120px;
-  margin-right: 10px;
+  width: 110px;
+  margin-top: 25px;
+}
+
+.toggle-btn img {
+  width: 20%;
+}
+
+span{
+  font-size: 20px;
 }
 
 .main-headline{
-  margin-top: 15%;
+  margin-top: 12%;
   margin-left: 30px;
   width: 80%;
   padding: 40px;
@@ -1504,29 +1408,23 @@ p.label, p.description{
 
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .partners-item{
-  width: 100%;
+  width: 25%;
 }
 
 .partners-item h3{
-  font-size: 40px;
-  padding: 0 30px;
+  font-size: 50px;
+  padding: 0;
   width: 100%;
+  margin-left: 70px;
 }
 
-img.partner-logo{
-  width: 100%;
-}
-
-img#uax{
-  width: 40%;
-  margin: 0 auto;
-position: relative;
-left: 30%;
-}
 
 
 /***FOOTER***/
@@ -1616,38 +1514,22 @@ and (max-width: 834px) {
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 12%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
+  width: 40%;
 }
 
-.logo-name{
-  font-size: 25px;
-  padding-top:5px;
+.toggle-btn {
+  width: 120px;
+  margin-top: 25px;
+}
+
+.toggle-btn img {
+  width: 20%;
 }
 
 span{
-  padding:0;
-  font-size: 25px;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 15px;
-  width: 120px;
-}
-
-.toggle-btn{
-  margin-right: 10px;
+  font-size: 20px;
 }
 
 .main-headline{
@@ -1767,14 +1649,14 @@ p.label, p.description{
 
 /* PARTNERS START */
 .partners{
-  padding: 10px 0;
+  padding: 20px 0;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
 .partners-item{
-  width: 100%;
+  width: 25%;
 }
 
 .partners-item h3{
@@ -1787,15 +1669,8 @@ p.label, p.description{
 img.partner-logo{
   width: 70%;
   position: relative;
-  left: 15%;
 }
 
-img#uax{
-width: 30%;
-margin: 0 auto;
-position: relative;
-left: 35%;
-}
     /***FOOTER***/
     .footer .footer-logo,
 .footer .footer-left,
@@ -1876,40 +1751,26 @@ and (max-width: 992px) {
     background-size: 100%;
     width: 100%;
 }
-
-.hero{
-  margin: 20px 15px;
+.logo img{
+  margin-left: 0px;
+  width: 35%;
 }
 
-.hero img{
-  width: 12%;
-  margin-right: 00px;
+.toggle-btn {
+  width: 120px;
+  margin-top: 25px;
 }
 
-
-.logo-name{
-  font-size: 22px;
-  padding-top: 40px;
+.toggle-btn img {
+  width: 20%;
 }
 
 span{
-  padding:0;
-  font-size: 30px;
+  font-size: 20px;
 }
 
-span img{
-  width: 15%;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 30px;
-}
-.toggle-btn{
-  margin-right: 10px;
-}
 .main-headline{
-  margin-top: 30%;
+  margin-top: 20%;
   margin-left: 50px;
   width: 80%;
   padding: 40px;
@@ -2117,45 +1978,21 @@ and (max-width: 1279px) {
     width: 100%;
 }
 
-.hero{
-  margin: 20px 15px;
-}
-
-.hero img{
-  width: 15%;
-  margin-right: 0px;
-}
-
-
 .logo img{
   margin-left: 0px;
+  width: 30%;
 }
 
-.logo-name{
-  font-size: 25px;
-  padding-top: 50px;
+.toggle-btn img {
+  width: 20%;
 }
 
 span{
-  padding:0;
-  font-size: 30px;
-}
-
-span img{
-  width: 15%;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 45px;
-}
-
-.toggle-btn{
-  margin-right: 10px;
+  font-size: 20px;
 }
 
 .main-headline{
-  margin-top: 30%;
+  margin-top: 25%;
   margin-left: 50px;
   width: 80%;
   padding: 40px;
@@ -2359,47 +2196,20 @@ body{
   background-size: contain;
 }
 
-.hero{
-  margin: 40px 15px;
-}
-
-.hero img{
-  width: 10%;
-  margin-right: 20px;
-}
-
-
 .logo img{
   margin-left: 0px;
 }
 
-.logo-name{
-  font-size: 25px;
-  padding-top: 50px;
+.toggle-btn img {
+  width: 20%;
 }
 
-.toggle-btn{
-width: 180px;
-}
-
-.toggle-btn img{
-  width: 30%;
-}
 span{
-  padding:0;
-  font-size: 30px;
+  font-size: 20px;
 }
 
-span img{
-  width: 15%;
-}
-
-span.toggle-btn{
-  float: right;
-  margin-top: 30px;
-}
   .main-headline{
-    margin-top: 15%;
+    margin-top: 8%;
     margin-left: 120px;
 }
   h1.headline{
@@ -2444,54 +2254,28 @@ font-size: 14px;
 
 @media only screen 
 and (min-width: 1367px) 
-and (max-width: 1440px) {
+and (max-width: 1499px) {
 body{
   background-image: url(../img/mainbg-med2.jpg);
   width: 100%;
   background-size: contain;
 }
 
-.hero{
-  margin: 40px 15px;
-}
-
-.hero img{
-  width: 10%;
-  margin-right: 20px;
-}
-
-
 .logo img{
   margin-left: 0px;
 }
 
-.logo-name{
-  font-size: 25px;
-  padding-top: 50px;
+.toggle-btn img {
+  width: 20%;
 }
 
-.toggle-btn{
-width: 180px;
-}
-
-.toggle-btn img{
-  width: 30%;
-}
 span{
-  padding:0;
-  font-size: 30px;
+  font-size: 20px;
 }
 
-span img{
-  width: 15%;
-}
 
-span.toggle-btn{
-  float: right;
-  margin-top: 30px;
-}
   .main-headline{
-    margin-top: 15%;
+    margin-top: 8%;
     margin-left: 120px;
 }
   h1.headline{
@@ -2502,10 +2286,6 @@ span.toggle-btn{
 
   .personal-info{
     padding: 0 40px;
-  }
-
-  #uax{
-    margin-left: 120px;
   }
 
   img#uax{
@@ -2524,45 +2304,20 @@ span.toggle-btn{
 @media only screen 
 and (min-width: 1500px) 
 and (max-width: 1652px) {
-  .hero{
-    margin: 40px 15px;
-  }
-  
-  .hero img{
-    width: 10%;
-    margin-right: 20px;
-  }
-  
-  
+
   .logo img{
     margin-left: 0px;
   }
+
+  .toggle-btn img {
+    width: 20%;
+}
   
-  .logo-name{
-    font-size: 25px;
-    padding-top: 50px;
-  }
-  
-  .toggle-btn{
-  width: 180px;
-  }
-  
-  .toggle-btn img{
-    width: 30%;
-  }
   span{
-    padding:0;
-    font-size: 30px;
+    font-size: 20px;
   }
   
-  span img{
-    width: 15%;
-  }
   
-  span.toggle-btn{
-    float: right;
-    margin-top: 30px;
-  }
     /***FOOTER***/
     .footer .footer-left{
         margin-left: 80px;
