--- a/css/style-four.css
+++ b/css/style-four.css
@@ -120,7 +120,7 @@ td{
     color: rgb(255, 255, 255);
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 5px;
     position: absolute;
     z-index: 1;
     bottom: 125%;
