--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ a{
     /****LOGO***/
 
     .hero{
-        margin: 20px 30px 0 0;
+        margin: 20px 0 0 20px;
+        height: 120px;
     }
     .logo{
         display: inline;
@@ -213,11 +214,11 @@ a{
      flex-wrap: wrap;
      width: 100%;
      justify-content: center;
+     align-items: stretch;
  }
 
  .services-item{
      width: 30%;
-
  }
 
  .services{
@@ -226,6 +227,7 @@ a{
     margin: 20px;
     border-radius: 20px;
     box-shadow: 2px 2px 7px 3px rgb(163, 163, 163, 0.5);
+    min-height: 250px;
  }
 
  .service-btn{
@@ -387,11 +389,16 @@ h2.block-three-headline{
   padding: 40px 0;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .partners-item{
   width: 20%;
   margin: 0 auto;
+}
+
+img.partner-logo{
+  width: 80%;
 }
 
 
@@ -592,6 +599,7 @@ hr{
 
 a.reference{
   color: rgb(255, 137, 1);
+  font-size: 14px;
 }
 
 a.reference:hover{
